--- a/root/css/styling.css
+++ b/root/css/styling.css
@@ -11,7 +11,8 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+ "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: black;
   margin-top: 0px;
   margin-bottom: 0px;
