--- a/root/css/styling.css
+++ b/root/css/styling.css
@@ -3,7 +3,9 @@
   padding: 0; }
 
 body {
-  background-color: rgba(121, 228, 13, 0.847);
+    background: rgb(123,134,232);
+    background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%);
+    color: #270942;
   margin-left: 10px;
   border-left: 10px grey; }
 
@@ -19,7 +21,7 @@ h1 {
   border-top: 5px solid white;
   border-bottom: 5px solid white;
   padding: 5px;
-  background-color: rgba(121, 228, 13, 0.847); }
+}
 
 .impbuttons {
   display: flex;
@@ -30,7 +32,7 @@ h1 {
   width: 8%;
   height: auto;
   font-size: 20px;
-  background-color: rgba(121, 228, 13, 0.847);
+  /* background-color: rgba(121, 228, 13, 0.847); */
   padding: 8px;
   /* border: 5px solid white;*/
   border-top: 0px; }
@@ -43,17 +45,18 @@ button {
   font-size: 15px;
   font-weight: 300;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: rgba(121, 228, 13, 0.847); }
+  background-color: rgba(133, 214, 51, 0.945); 
+}
 
 button:hover {
   cursor: pointer;
-  color: white;
-  background-color: #55c57a; }
+  color: #26c25a;
+  background-color: white }
 
 .impbuttons,
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
   margin: 0px; }
 
 .impbuttons :last-child {
